[package]
name = "crier"
version = "0.1.0"
authors = ["Captain Bland <lightnix@gmail.com>"]

[dependencies]
iron = "0.6"
router = "*"
maud_macros = "*"
iron-test = "*"
iron-csrf = "*"
mount = "*"
staticfile = "*"
env_logger = "*"
urlencoded = "*"
serde = "*"
serde_derive = "*"
serde_urlencoded = "*"
plugin = "*"

diesel = { version = "1.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"

ring = "0.13.2"
qrcodegen = "*"
lodepng = "2.4.2"
validator = "0.8.0"
validator_derive = "0.8.0"
regex = "1"
bcrypt="*"
redis = "*"
iron-sessionstorage = { git="https://github.com/iron/iron-sessionstorage", features = ["redis-backend"] }
[dependencies.maud]
git = "https://github.com/captainbland/maud"
features = ["iron"]

[dependencies.logger]
git = "https://github.com/iron/logger.git"