[package]
name = "crier"
version = "0.1.0"
authors = ["Captain Bland <lightnix@gmail.com>"]
edition="2018"
[dependencies]
iron = "0.6"
router = "*"
maud_macros = "*"
iron-test = "*"
iron-csrf = "*"
mount = "*"
staticfile = "*"
env_logger = "*"
log="*"
urlencoded = "*"
serde = "*"
serde_derive = "*"
serde_urlencoded = "*"
serde_json = "*"
plugin = "*"
diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
r2d2 = "0.8.3"
r2d2-diesel = "1.0.0"
r2d2_postgres = "*"
escargot = "*"

ring = "0.13.2"
qrcodegen = "*"
lodepng = "2.4.2"
validator = "0.8.0"
validator_derive = "0.8.0"
regex = "1"
bcrypt="*"
redis = "*"
iron-sessionstorage = { git="https://github.com/iron/iron-sessionstorage", features = ["redis-backend"] }
stripe-rust="0.9"
reqwest = "0.9.9"
params = "*"
futures = "0.1"
mock_derive = "*"
selenium-rs = "0.1.0"
[dependencies.maud]
version = "0.19"
features = ["iron"]

[dependencies.logger]
git = "https://github.com/iron/logger.git"

[features]
debug = []